19.10.2014:
         - Moved Wine VST synths to separate sub menu (rj)
         - Allow unselecting default midi output port (rj)
15.10.2014:
         - Fixed crash bug iterating through events in script executor (rj)
         - Added script RemoveAftertouch (rj)
12.10.2014:
         - Reworked the PluginDialog to use a ui file and give more filter possibilities (rj)
         - Added [HOME] button to file open dialog (rj)
         - Added QMessageBox warning about missing synths (rj)

10.10.2014:
         - Don't allow changing the port of a soft synth, it makes no sense (rj)
07.10.2014:
         - Changed detection of liblo to make it a strict requirement as the code would not
           build without it when DSSI was enabled (rj)
27.09.2014:
         - Added QMessageBox warning about missing plugins (rj)
         - Ignore undo/redo while recording (rj)
01.09.2014:
         - Fix crash reported by LakeIshikawa: Pressing delete while clicking or dragging events or parts. (Tim)
           Ignore commands (like del) in each editor's ::cmd() handler if current canvas drag mode is not DRAG_OFF.
         - Added Arranger menu item Edit -> Delete, does same thing as pressing delete, either parts or tracks.
         - Added new SongChanged flags: SC_PART_SELECTION SC_TRACK_SELECTION, to distinguish from events SC_SELECTION.
         - Fixed copy/paste problem: Paste copies not clones, if the original parts/tracks have been deleted.
           Added 'bool ClonePart::is_deleted', set/cleared when parts/tracks deleted/added. Checked in Part::readFromXml(). 
16.06.2014:
         - Transformation to non-shared event lists (started by Florian) is virtually complete. (Tim) 
           Events have an ID now, shared among clone parts. 
           New: Fast pending operations lists: They replace RT "execute/revert ops stage-2". 
         - A few more commands support Undo/Redo now, like setting global tempo. 
         - Handful of (un)related fixes along the way.       
29.04.2014: