@@ -1,6 +1,7 @@
 19.10.2014:
          - Moved Wine VST synths to separate sub menu (rj)
          - Allow unselecting default midi output port (rj)
+         - Fixed value update of pitch knob in SimpleDrums plugin (rj)
 15.10.2014:
          - Fixed crash bug iterating through events in script executor (rj)
          - Added script RemoveAftertouch (rj)
